[project]
name = "tkg-dm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shunsuke KITADA", email = "shunsuke.kitada.0831@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "diffusers[torch]>=0.30.0",
    "transformers[torch]>=4.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=6.0.0",
    "ruff>=0.1.5",
]
